assets/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
  line-height: 1.5em;
  color: #222;
  max-width: 40rem;
  padding: 2rem;
  margin: auto;
  background: #fafafa;
}

img {
  max-width: 100%;
}

a {
  color: #0074D9;
}

h1, h2, strong {
  color: #111;
}

h1 {
  font-size: 1.6em;
}

h2 {
  font-size: 1.3em;
  margin-top: 1.3em;
  margin-bottom: 0.2em;
}

h3 {
  font-size: 1.1em;
  font-style: italic;
  margin-top: 1.3em;
  margin-bottom: 0.2em;
}

p {
  margin-top: 0.5em;
  margin-bottom: 1em;
}

li {
  margin-top: 0.5em;
  margin-bottom: 0.66em;
}

hr {
  border: 0px;
  border-top: 1px solid #eee;
}

.muted {
  color: #aaa;
  text-decoration: none;
}

.not-muted {
  color: #222;
  text-decoration: none;
}

.small {
  font-size: .8em;
}

@media (prefers-color-scheme: dark) {
  body {
    color: #fafafa;
    background: #222;
  }

  h1, h2, strong {
    color: #fafafa;
  }

  hr {
    border-top: 1px solid #383838;
  }

  img {
    filter: brightness(.8) contrast(1.2);
  }

  .not-muted {
    color: #fafafa;
  }
}

